# food-truck-finder

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  local.env  manage.py  pyproject.toml
food_truck_finder/: asgi.py  settings.py  urls.py  wsgi.py
truck_food_finder/: settings.py  wsgi.py
trucks/: filters.py  models.py  serializers.py  views.py
trucks/management/commands/: import_foodtrucks.py
trucks/migrations/: 0001_initial.py
trucks/tests/: test_command.py  test_truck_views.py
