[tool.poetry]
name = "truck-food-finder"
version = "0.1.0"
description = ""
authors = ["Guilherme S.V. Beira <guilherme.vieira.beira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
prettyconf = "^2.2.1"
django-rest-framework = "^0.1.0"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
